fix overflow on wells

--- a/app/css/main.css
+++ b/app/css/main.css
@@ -297,6 +297,11 @@ menu ul li.selected {
     text-align: right;
 }
 
+/* fix well overflow */
+.well {
+    overflow: auto;
+}
+
 /* ALERT */
 .alert {
     margin-top:20px;
